--- a/my_example/members/templates/first.html
+++ b/my_example/members/templates/first.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <body>
 
-<h1>Hello World!</h1>
-<p>Welcome to my first Django project!</p>
+<h1>{{ mymember.firstname }} {{ mymember.lastname }}</h1>
+  
+<p>Phone: {{ mymember.phone }}</p>
+<p>Member since: {{ mymember.joined_date }}</p>
+
+<p>Back to <a href="/members">Members</a></p>
 
 </body>
 </html>
