--- a/my_example/members/templates/base.html
+++ b/my_example/members/templates/base.html
@@ -20,10 +20,10 @@
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'create' %}">Create To-do</a>
+                        <a class="nav-link" href="{% url 'create' %}">To-do үүсгэх</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'completed' %}">Completed To-do</a>
+                        <a class="nav-link" href="{% url 'completed' %}">Дуусгасан To-do</a>
                     </li>
                 </ul>
             </div>
