--- a/my_example/members/templates/completed.html
+++ b/my_example/members/templates/completed.html
@@ -6,10 +6,10 @@
         <thead>
             <tr>
                 <th scope="col">#</th>
-                <th scope="col">Title</th>
-                <th scope="col">Content</th>
-                <th scope="col">Date</th>
-                <th scope="col">Action</th>
+                <th scope="col">Гарчиг</th>
+                <th scope="col">Агуулга</th>
+                <th scope="col">Огноо</th>
+                <th scope="col">Үйлдэл</th>
             </tr>
         </thead>
         <tbody>
@@ -20,7 +20,7 @@
                 <td>{{ todo.task_content }}</td>
                 <td>{{ todo.created_date|date:"d-m-y" }}</td>
                 <td>
-                    <a class="btn btn-danger btn-sm" href="{% url 'delete' todo.id %}">Delete</a>
+                    <a class="btn btn-danger btn-sm" href="{% url 'delete' todo.id %}">Устгах</a>
                 </td>
             </tr>
             {% endfor %}
