--- a/my_example/members/templates/create.html
+++ b/my_example/members/templates/create.html
@@ -6,7 +6,7 @@
     <form class="form-control" action="" method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Хадгалах</button>
     </form>
     
 </div>
