--- a/my_example/members/templates/edit.html
+++ b/my_example/members/templates/edit.html
@@ -6,7 +6,7 @@
     <form class="form-control" action="" method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Update</button>
+        <button type="submit" class="btn btn-primary">Шинэчлэх</button>
     </form>
 </div>
 </div>
