--- a/my_example/members/templates/base.html
+++ b/my_example/members/templates/base.html
@@ -25,6 +25,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'completed' %}">Дуусгасан To-do</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'notes' %}">Notes</a>
+                    </li>
                 </ul>
             </div>
         </div>
