base template change

--- a/my_example/members/templates/base.html
+++ b/my_example/members/templates/base.html
@@ -17,13 +17,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Task</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'create' %}">To-do үүсгэх</a>
+                        <a class="nav-link" href="{% url 'create' %}">Task үүсгэх</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'completed' %}">Дуусгасан To-do</a>
+                        <a class="nav-link" href="{% url 'completed' %}">Дуусгасан Task</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'notes' %}">Notes</a>
@@ -50,10 +50,10 @@
             <div class="col-lg-4">
                 <div class="col-md-4 float-right ">
                     <div class="card my-4">
-                        <h5 class="card-header">About ToDo App</h5>
+                        <h5 class="card-header">Танилцуулга</h5>
                         <div class="card-body">
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ipsum perferendis nostrum aut maxime cum ipsam dolorum, quidem quis! Impedit, hic explicabo. Consectetur provident illo dolore tempora consequuntur deserunt qui.</p>
-                            <a href="https://Aziyan99.github.io"
+                            <a href=""
                                class="btn btn-danger">Дэлгэрэнгүй!</a>
                         </div>
                     </div>
