--- a/my_example/members/templates/base.html
+++ b/my_example/members/templates/base.html
@@ -41,7 +41,7 @@
         {% endfor %}
         {% endif %}
     </div>
-    <div class="container">
+    <div class="container" style="padding-bottom: 300px;">
         <div class="row">
             <div class="col-lg-8">
                 {% block content %}
@@ -61,15 +61,35 @@
             </div>
         </div>
     </div>
+    
     <style>
         .card{
             box-shadow: 0 16px 48px #E3E7EB;
             width: 300px;
         }
     </style>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous">
+    </script>
+    <footer >
+        <div class="container-fluid bg-dark text-light">
+            <div class="container py-5">
+                <div class="row">
+                    <div class="col-sm-12 col-md-3 col-lg-3">
+                        <h6>Холбоо барих</h6>
+                        <p class="font-weight-light">###.com</p>
+                    </div>
+                    <div class="col-sm-12 col-md-3 col-lg-3">
+                        
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-6">  
+                        54t45
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
