--- a/members/templates/base.html
+++ b/members/templates/base.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://unpkg.com/htmx.org/dist/htmx.min.js"></script>
 </head>
 
 <body>
@@ -61,17 +62,19 @@
             </div>
         </div>
     </div>
-
+    
     <style>
         .card{
             box-shadow: 0 16px 48px #E3E7EB;
             width: 300px;
         }
     </style>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous">
     </script>
+   
     <footer >
         <div class="container-fluid bg-dark text-light">
             <div class="container py-5">
